# skill-browser

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: filter.rs  highlight.rs  lib.rs  main.rs  model.rs  parser.rs  preview.rs  scanner.rs  ui.rs
src/backend/: gh_skill.rs  manual.rs  mod.rs  npx_skills.rs  plugin.rs
