[package]
name = "skill-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
skim = "0.10"
dirs = "6"
terminal_size = "0.4.4"
tuikit = "0.5.0"

[dev-dependencies]
tempfile = "3"
